[gd_scene load_steps=7 format=2]

[ext_resource path="res://menu/intro1.png" type="Texture" id=1]
[ext_resource path="res://Sprites/pkmn_cards.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Card.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Pokemon X and Y.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=4]
size = 26
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 4 )

[node name="Card" type="Node2D"]
position = Vector2( 194, 135 )
script = ExtResource( 3 )

[node name="bckg_white" type="Sprite" parent="."]
position = Vector2( 198, 152.5 )
scale = Vector2( 10.4082, 21.4762 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 194, 70, 49, 21 )

[node name="spr_pkmn" type="Sprite" parent="."]
position = Vector2( 41, 36 )
scale = Vector2( 3.09649, 3.08065 )
texture = ExtResource( 2 )
hframes = 15
vframes = 11

[node name="txtnum" type="Label" parent="."]
margin_left = -11.0
margin_top = 130.0
margin_right = 29.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "No."

[node name="txtnum2" type="Label" parent="."]
margin_left = 21.0
margin_top = 130.0
margin_right = 61.0
margin_bottom = 164.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "???"

[node name="txtname" type="Label" parent="."]
margin_left = 181.0
margin_top = -32.0
margin_right = 376.0
margin_bottom = 9.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "?????????????"

[node name="txttipo" type="Label" parent="."]
margin_left = 183.0
margin_top = 24.0
margin_right = 378.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "?????????????"

[node name="txtht" type="Label" parent="."]
margin_left = 184.0
margin_top = 76.0
margin_right = 217.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "HT "

[node name="txtht2" type="Label" parent="."]
margin_left = 224.0
margin_top = 76.0
margin_right = 344.0
margin_bottom = 117.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "????????"

[node name="txtwt" type="Label" parent="."]
margin_left = 186.0
margin_top = 137.0
margin_right = 219.0
margin_bottom = 178.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "WT"

[node name="txtwt2" type="Label" parent="."]
margin_left = 226.0
margin_top = 137.0
margin_right = 346.0
margin_bottom = 178.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "????????"

[node name="txtdesc" type="Label" parent="."]
margin_left = -39.0
margin_top = 213.0
margin_right = 435.0
margin_bottom = 366.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "???????????????????????????????"
autowrap = true
